[metadata]
name = torchrl_algos
version = attr: torchrl_algos.VERSION
description = A package with some sotas from torchrl with some more customization options.
;long_description = file: README.md
keywords = torchrl, reinforcement learning
license = MIT License
classifiers =
    Programming Language :: Python :: 3
author = Michal Gregor

[options]
zip_safe = False
include_package_data = True
packages = find:
;scripts =
;  bin/first.py
;  bin/second.py
install_requires =
   torch
   torchrl

[options.package_data]
* = *.txt, *.rst
;hello = *.msg

;[options.packages.find]
;exclude =
;    src.subpackage1
;    src.subpackage2
